[package]
name = "nixpkgs-fmt"
version = "1.3.0"
authors = [
  "Aleksey Kladov <aleksey.kladov@gmail.com>",
  "zimbatm <zimbatm@zimbatm.com>"
]
edition = "2018"
license = "Apache-2.0"
description = "Nix code formatter for nixpkgs"
repository = "https://github.com/nix-community/nixpkgs-fmt"

[workspace]
members = [ "./wasm" ]

[dependencies]
rnix = { git = "https://github.com/nix-community/rnix-parser.git", rev = "9001e02bbd1eed60af26cd9fe36303da25fc9680" }
smol_str = "0.1.17"

# Dependencies that are used in the binary only
# Ideally, the feature should be enabled only for binary,
# but Cargo can't express that nicely yet.
crossbeam-channel = "0.4"
ignore = "0.4.10"
clap = "2.33.0"
libc = "0.2.99"

# Enable serialization support for rnix syntax trees.
serde_json = "1.0"

[dependencies.rowan]
version = "0.15.0"
features = [ "serde1" ]

[dev-dependencies]
unindent = "0.1.3"
